# dionaea

./: .clang-tidy  .dockerignore  .drone.yml  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  Dockerfile  IDEAS  README.md  TODOS  config.h.cmake  pyproject.toml  shell.nix  test_shellcode_x64.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  codeql.yml  docker.yml  weekly-release.yml
cmake/: GetVersionFromGit.cmake
conf/: dionaea.cfg.cmake
conf/ihandlers/: cmdshell.yaml  emu_scripts.yaml  emuprofile.yaml  ftp.yaml  hpfeeds.yaml  nfq.yaml  p0f.yaml  s3.yaml  speakeasy.yaml  store.yaml  submit_http.yaml  submit_http_post.yaml  tftp_download.yaml
conf/services/: blackhole.yaml  epmap.yaml  memcache.yaml  mirror.yaml  mongo.yaml  mqtt.yaml  mssql.yaml  mysql.yaml  nbns.yaml.in  pptp.yaml  smb.yaml  snmp.yaml  tftp.yaml.in
doc/: speakeasy-future-improvements.md
doc/source/: conf.py  support.rst
doc/source/module/: index.rst  speakeasy.rst
docker/: README.md  entrypoint.sh
include/: connection.h  dionaea.h  node_info.h  signals.h  util.h
modules/: CMakeLists.txt
modules/curl/: CMakeLists.txt  module.c
modules/emu/: CMakeLists.txt  emulate.c  module.c
modules/nc/: nc.c
modules/nfq/: CMakeLists.txt  nfq.c
modules/nl/: CMakeLists.txt  module.c
modules/pcap/: CMakeLists.txt  pcap.c
modules/python/: CMakeLists.txt  binding.pyx  module.c  module.h  pyproject.toml  setup.py.in2
modules/python/dionaea/: __init__.py  blackhole.py  cmd.py  core.pyi  echo.py  emu.py  exception.py  fail2ban.py  ftp.py  ftp_download.py  hpfeeds.py  http.py  ihandlers.py  log.py  log_incident.py  log_json.py  logsql.py  mirror.py  ndrlib.py  nfq.py  p0f.py  printer.py  s3.py  services.py  speakeasy.py  store.py  submit_http.py  submit_http_post.py  tftp.py  util.py  virustotal.py
modules/python/dionaea/emu_scripts/: __init__.py  handler.py
modules/python/dionaea/log_db_sql/: controller.py
modules/python/dionaea/memcache/: __init__.py  command.py  var.py
modules/python/dionaea/mongo/: __init__.py  mongo.py  packets.py
modules/python/dionaea/mqtt/: __init__.py  mqtt.py
modules/python/dionaea/mqtt/include/: packets.py
modules/python/dionaea/mssql/: __init__.py  mssql.py
modules/python/dionaea/mysql/: __init__.py  mysql.py  var.py
modules/python/dionaea/mysql/include/: fields.py
modules/python/dionaea/nbns/: __init__.py  nbns.py
modules/python/dionaea/pptp/: __init__.py  pptp.py
modules/python/dionaea/pptp/include/: packets.py
modules/python/dionaea/sip/: __init__.py  extras.py  rfc2396.py  rfc2617.py  rfc3261.py  rfc4566.py
modules/python/dionaea/smb/: __init__.py  extras.py  rpcservices.py  smb.py
modules/python/dionaea/smb/include/: asn1fields.py  asn1packet.py  fieldtypes.py  helpers.py  ntlmfields.py  packet.py  smbfields.py
modules/python/dionaea/smb/include/asn1/: asn1.py  ber.py
modules/python/dionaea/snmp/: __init__.py
modules/python/dionaea/upnp/: __init__.py  upnp.py
modules/python/util/: csv2sqlite.py  gnuplotsql.py  logsql2postgres.py  readlogsqltree.py  retry.py  updateccs.py
modules/python/util/xmpp/: pg_backend.py
modules/speakeasy/: CMakeLists.txt  detect.c  module.c  module.h
modules/xmatch/: CMakeLists.txt  module.c  xmatch.c
src/: CMakeLists.txt  bistream.c  connection.c  connection_dtls.c  connection_tcp.c  connection_tls.c  connection_udp.c  dionaea.c  dns.c  incident.c  log.c  modules.c  node_info.c  pchild.c  processor.c  signals.c  ssl.c  threads.c  util.c
tests/: Makefile  conftest.py  pytest.ini  requirements.txt
tests/ftp/tests/: test_ftp.py
tests/http/tests/: __init__.py  test_http_post_integration.py  test_http_smoke.py  test_multipart_parser.py  test_multipart_standalone.py
tests/nbns/tests/: __init__.py  test_nbns.py  test_nbns_smoke.py
tests/sip/: functional-test-sip.py
tests/smb/tests/: test_dcerpc.py  test_smb.py
tests/snmp/: test_snmp.py
tests/tftp/tests/: test_tftp.py
