[project]
name = "dionaea"
dependencies = [
    "construct>=2.10.0",
]

[tool.tox]
legacy_tox_ini = """
# SPDX-FileCopyrightText: none
# SPDX-License-Identifier: CC0-1.0

[tox]
envlist =
    lint
skip_missing_interpreters = true

[testenv:lint]
deps =
    ruff
    mypy
skip_install = true
commands = ruff check --ignore E741 {toxinidir}/modules
           mypy {toxinidir}/modules
"""
