[project]
name = "dionaea"
dependencies = [
    "construct>=2.10.0",
]

[tool.tox]
legacy_tox_ini = """
# SPDX-FileCopyrightText: none
# SPDX-License-Identifier: CC0-1.0

[tox]
envlist =
    lint
skip_missing_interpreters = true

[testenv:lint]
deps =
    ruff
    mypy
skip_install = true
commands = ruff check --ignore E741 {toxinidir}/modules
           mypy --no-strict-optional --ignore-missing-imports --allow-untyped-globals \
               --disable-error-code=import-untyped \
               --exclude 'modules/python/dionaea/(submit_http|hpfeeds|virustotal|s3)\\.py' \
               --exclude 'modules/python/dionaea/(log_db_sql|mqtt|pptp|sip)/' \
               --exclude 'modules/python/util/(csv2sqlite|xmpp/pg_backend)\\.py' \
               {toxinidir}/modules
"""
